--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase": "^10.14.1",
+    "globe.gl": "^2.33.0",
     "lucide-vue-next": "^0.451.0",
     "pinia": "^2.2.4",
     "vue": "^3.5.10",
