--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Run Super-Linter
         uses: github/super-linter@v4
@@ -21,3 +21,6 @@ jobs:
           VALIDATE_MARKDOWN: true
           VALIDATE_YAML: true
           VALIDATE_CSS: true
+          VALIDATE_VUE: true
+          VALIDATE_HTML: true
+          VALIDATE_TYPESCRIPT_ES: true
