--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
     "firebase": "^10.14.1",
     "globe.gl": "^2.33.0",
     "lucide-vue-next": "^0.451.0",
