--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "firebase": "^10.14.1",
-    "globe.gl": "^2.33.0",
+    "globe.gl": "^2.33.1",
     "lucide-vue-next": "^0.451.0",
     "pinia": "^2.2.4",
+    "three": "^0.169.0",
+    "three-globe": "^2.34.3",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5",
     "vue-spinner": "^1.0.4"
