--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "vue-spinner": "^1.0.4"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@vitejs/plugin-vue": "^5.1.4",
     "autoprefixer": "^10.4.20",
     "chromedriver": "^129.0.2",
