--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,8 @@
     "three-globe": "^2.34.3",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5",
-    "vue-spinner": "^1.0.4"
+    "vue-spinner": "^1.0.4",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
