Added report generation function in the Generate Report page; improve styling for certain pages/sections

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,12 @@
     "@headlessui/vue": "^1.7.23",
     "chart.js": "^4.4.7",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "exceljs": "^4.4.0",
     "firebase": "^10.14.1",
     "globe.gl": "^2.33.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "lucide-vue-next": "^0.454.0",
     "pinia": "^2.2.4",
     "three": "^0.169.0",
