--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.13",
     "vite": "^5.4.8",
-    "vite-plugin-nightwatch": "^0.4.6"
+    "vite-plugin-nightwatch": "^0.4.6",
+    "vite-plugin-pwa": "^1.0.0"
   }
 }
