--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@headlessui/vue": "^1.7.23",
     "chart.js": "^4.4.7",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "dom-to-image-more": "^3.6.0",
     "exceljs": "^4.4.0",
     "firebase": "^10.14.1",
     "globe.gl": "^2.33.1",
